--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@ body {
   background-color: rgb(240, 240, 245);
   font-family: Arial, Helvetica, sans-serif;
   margin: 1em;
+  display: flex;
+  justify-content: center;
 }
 
 .spielfeld {
@@ -31,7 +33,7 @@ h1 {
 
 .disabledFeld {
   cursor: not-allowed;
-  background: red;
+  color: lightgray;
 }
 
 .ziffer {
@@ -51,8 +53,15 @@ h1 {
   position: absolute;
   top: 0;
   left: 5px;
-  filter: invert(0.3) brightness(0.8);
+  filter: invert(35%) sepia(92%) saturate(818%) hue-rotate(179deg) brightness(91%) contrast(99%);
   cursor: pointer;
+  animation-name: showKreuzchen;
+  animation-duration: 0.5s;
+}
+
+@keyframes showKreuzchen {
+  from {opacity: 0;}
+  to {opacity: 1;}
 }
 
 .loeschen {
@@ -98,4 +107,8 @@ h1 {
 .disabledButton {
   cursor: not-allowed;
   background-color: lightgrey;
+}
+
+.outputAnzeige {
+  
 }
