--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@ body {
 }
 
 .spielfeld {
-  width: 400px;
-  height: 400px;
+  min-width: 200px;
+  min-height: 200px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -42,13 +42,13 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
-  height: 50px;
+  width: 35px;
+  height: 35px;
   background-color: #FFFFFF;
 }
 
 .kreuzchen {
-  width: 50px;
+  width: 35px;
   height: auto;
   position: absolute;
   top: 0;
@@ -107,8 +107,34 @@ h1 {
 .disabledButton {
   cursor: not-allowed;
   background-color: lightgrey;
+} 
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 0.2em;
 }
 
 .outputAnzeige {
+  text-align: right;
+}
+
+
+@media (min-width: 450px) {
+  .spielfeld {
+    width: 400px;
+    height: 400px;
+  }
+  
+  .ziffer {
+    width: 50px;
+    height: 50px;
+  }
+  
+  .kreuzchen {
+    width: 50px;
+  }
+
   
 }
